--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Oraganisation",
         "Oraganization",
         "organisation",
+        "orgname",
         "otpauth",
         "otpstore",
         "prayaas",
